Change label message

--- a/demo.html
+++ b/demo.html
@@ -58,7 +58,7 @@
                     <input class="form-styling" type="text" name="fullname" id="fullname" placeholder="" />
                     <label for="email">Email</label> 
                     <input class="form-styling" type="email" name="email"   id="email" placeholder="" /> 
-                    <label for="dlno">Enter Contact Number</label> 
+                    <label for="dlno">Enter Personal Contact Number</label> 
                     <input class="form-styling" type="text" name="dlno"  id="contactno" placeholder="" /> 
                     <label for="password">Create password</label> 
                     <input class="form-styling" type="password" name="password"  id="password" placeholder="" /> 
